--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,30 @@
+:root {
+    --mount-meadow: #8e793e;
+    --white-smoke: #eaeaea;
+    --night-rider: #231f20;
+    --black: #191b17;
+    --dark-mode: #121212;
+    --transition: all 0.5s ease-in-out;
+    --dark-mode-color: rgba(255, 255, 255, 0.87);
+    --dark-mode-color1: #666;
+}
+
 body {
+    background: var(--dark-mode);
     margin: 0;
     font-family: Roboto;
+}
+
+.box {
+    z-index: 1000;
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0px 35px 55px rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    border-right: 0px 35px 55px rgba(255, 255, 255, 0.1);
+    border-bottom: 0px 35px 55px rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    overflow: hidden;
+    backdrop-filter: blur(25px);
 }
 
 .wrapper {
@@ -10,7 +34,7 @@ body {
 
 h1 {
     margin: 40px auto;
-    color: #ff0aa7;
+    color: var(--dark-mode-color);
     text-align: center;
 }
 
@@ -26,7 +50,7 @@ li {
 }
 
 li h4 {
-    color: #ff0aa7;
+    color: var(--dark-mode-color);
     margin: 0;
     text-transform: capitalize;
 }
@@ -40,6 +64,9 @@ footer {
     background: #eee;
     padding: 60px;
     margin-top: 60px;
+    max-width: 1000px;
+    margin: 0 auto;
+    height: 150px;
 }
 
 form {
@@ -52,15 +79,24 @@ label {
     display: block;
     font-weight: bold;
     font-size: 0.8em;
-    color: #333;
+    color: var(--dark-mode-color1);
     margin: 16px 0 6px;
 }
 
 input,
 select {
-    padding: 6px;
+    padding: 8px;
     border: 1px solid #e1e1e1;
     border-radius: 4px;
+    color: var(--dark-mode);
+    transition: all 0.4s ease-in-out;
+}
+
+input:focus,
+select:focus {
+    outline: none;
+    padding: 10px;
+    font-size: 17px;
 }
 
 .field {
@@ -69,18 +105,31 @@ select {
 }
 
 button {
-    color: white;
-    border: 0;
-    background: #ff0aa7;
-    padding: 6px;
-    min-width: 80px;
-    border-radius: 4px;
+    width: 150px;
+    background: var(--dark-mode-color);
+    color: var(--dark-mode);
+    border: none;
+    cursor: pointer;
+    padding: 9px;
+    font-size: 17px;
+    border-radius: 2px;
+    transition: var(--transition);
+    outline: none;
+    font-weight: bold;
+    border-radius: 2px;
+}
+
+button:hover {
+    -webkit-box-shadow: 0 18px 13px -2px rgb(22, 21, 21);
+    -moz-box-shadow: 0 18px 13px -2px rgba(21, 21, 21, 1);
+    box-shadow: 0 18px 13px -2px rgba(21, 21, 21, 1);
+    transform: translateX(10px);
 }
 
 footer a {
     text-align: center;
     display: block;
-    color: #999;
+    color: var(--mount-meadow);
     margin-top: 40px;
     font-size: 0.7em;
 }
